Quick fix for header image on iPhone 5

--- a/_assets/stylesheets/page.less
+++ b/_assets/stylesheets/page.less
@@ -428,3 +428,9 @@ body {
 #goog-wm-sb {
 	.btn();
 }
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 568px) {
+  .entry-image img {
+    height: 100%;
+  }
+}
